--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
+    "gulp": "^3.9.1",
     "jquery": "3.2.1",
     "ng-jhipster": "0.2.7",
     "ng2-webstorage": "1.8.0",
@@ -29,6 +30,7 @@
     "rxjs": "5.4.2",
     "swagger-ui": "2.2.10",
     "tether": "1.4.0",
+    "yarn": "^0.27.5",
     "zone.js": "0.8.13"
   },
   "devDependencies": {
