--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,8 @@
         <run.addResources>false</run.addResources>
         <scala-maven-plugin.version>3.2.2</scala-maven-plugin.version>
         <scala.version>2.12.1</scala.version>
+        
+        <sonar.host.url>http://localhost:9500</sonar.host.url>
         <sonar-maven-plugin.version>3.2</sonar-maven-plugin.version>
 
         <sonar.exclusions>src/main/webapp/content/**/*.*, src/main/webapp/bower_components/**/*.*, src/main/webapp/i18n/*.js, target/www/**/*.*</sonar.exclusions>
